target/classes/META-INF/fabric8/openshift/user-service-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: aad5c8f8294ee78cfef500621c89be00e6517200
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=user-service&var-version=0.0.1-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/user-service
  labels:
    app: user-service
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: it.extrasys.tesi.tagsystem
  name: user-service
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: user-service
    provider: fabric8
    group: it.extrasys.tesi.tagsystem
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: aad5c8f8294ee78cfef500621c89be00e6517200
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=user-service&var-version=0.0.1-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/user-service
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/git-branch: master
        fabric8.io/scm-tag: HEAD
      labels:
        app: user-service
        provider: fabric8
        version: 0.0.1-SNAPSHOT
        group: it.extrasys.tesi.tagsystem
    spec:
      containers:
      - env:
        - name: USERDB_USERNAME
          value: marco
        - name: USERDB_PASSWORD
          value: superman
        - name: USERDB_DATABASE
          value: tagsystem_user
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: user-service:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - spring-boot
      from:
        kind: ImageStreamTag
        name: user-service:latest
    type: ImageChange
