target/classes/META-INF/fabric8/openshift/user-service-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: user-service
    provider: fabric8
    version: 0.0.1-SNAPSHOT
    group: it.extrasys.tesi.tagsystem
  name: user-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: user-service
